--- a/Todo-master/backend/apps/users/templates/confirm_email.html
+++ b/Todo-master/backend/apps/users/templates/confirm_email.html
@@ -1,7 +1,7 @@
 {% extends 'base_email.html' %}
 
 {% block body %}
-<h1>Добро пожаловать в Botcommerce.</h1>
+<h1>Добро пожаловать в Backend.</h1>
 <p>Чтобы начать пользоваться, пожалуйста подтвердите свой Эмайл адрес, нажав на кнопку ниже.</p><br />
 
 <div style="text-align: center;">
